[package]
name = "parse-zoneinfo"
version = "0.3.1"
authors = ["Djzin <djzin@users.noreply.github.com>"]
description = "Parse zoneinfo files from the IANA database"
keywords = ["date", "time", "timezone", "zone", "calendar"]
repository = "https://github.com/djzin/parse-zoneinfo"
readme = "README.md"
license = "MIT"

[features]
serde = ["dep:serde"]

[dependencies.regex]
version = "1.3.1"
default-features = false
features = ["std", "unicode-perl"]

[dependencies.serde]
version = "1.0.188"
featured = ["derive"]
optional = true
